@@ -2,34 +2,38 @@ package com.ufr.mim.angryballs.server;
 
 import com.ufr.mim.angryballs.core.models.Ball;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.List;
+import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
+
+import static java.lang.Boolean.TRUE;
 
 public class CharlesHelpMe {
 
   private final Collection<Ball> balls;
 
-  private boolean send = false;
+  private final Map<Integer, Boolean> send = new ConcurrentHashMap<>();
 
   public CharlesHelpMe(Ball... balls) {
-    this(Arrays.asList(balls));
+    this(List.of(balls));
   }
 
   public CharlesHelpMe(Collection<Ball> balls) {
     this.balls = balls;
   }
 
-  public List<Ball> getBalls() {
-    return new ArrayList<>(balls);
+  public Collection<Ball> getBalls() {
+    return balls;
   }
 
-  public synchronized boolean isSending() {
+  public synchronized boolean isSendingAll() {
+    return !send.isEmpty() && send.entrySet().stream().allMatch(entry -> TRUE.equals(entry.getValue()));
+  }
+
+  public synchronized void setAllFalse() {
+    send.replaceAll((key, value) -> false);
+  }
+
+  public synchronized Map<Integer, Boolean> getSend() {
     return send;
-  }
-
-  public void setSend(boolean send) {
-    this.send = send;
   }
 }
